--- a/HotelDlaPsow/WindowDailyIActiveAdd.xaml
+++ b/HotelDlaPsow/WindowDailyIActiveAdd.xaml
@@ -33,7 +33,32 @@
         <Label Content="Opis Aktywności" FontSize="16" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="2"></Label>
         <TextBox Text="{Binding idDog}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="2" Margin="7" Grid.ColumnSpan="2"></TextBox>
         <DatePicker Text="{Binding dateActivity}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="3" Margin="7" Grid.ColumnSpan="2"></DatePicker>
-        <TextBox Text="{Binding hour, StringFormat=hh:mm}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="4" Margin="7" Grid.ColumnSpan="2"></TextBox>
+        <ComboBox Text="{Binding hourActivity, StringFormat=hh\\:mm}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="4" Margin="7" Grid.ColumnSpan="2">
+            <ComboBoxItem>00:00</ComboBoxItem>
+            <ComboBoxItem>01:00</ComboBoxItem>
+            <ComboBoxItem>02:00</ComboBoxItem>
+            <ComboBoxItem>03:00</ComboBoxItem>
+            <ComboBoxItem>04:00</ComboBoxItem>
+            <ComboBoxItem>05:00</ComboBoxItem>
+            <ComboBoxItem>06:00</ComboBoxItem>
+            <ComboBoxItem>07:00</ComboBoxItem>
+            <ComboBoxItem>08:00</ComboBoxItem>
+            <ComboBoxItem>09:00</ComboBoxItem>
+            <ComboBoxItem>10:00</ComboBoxItem>
+            <ComboBoxItem>11:00</ComboBoxItem>
+            <ComboBoxItem>12:00</ComboBoxItem>
+            <ComboBoxItem>13:00</ComboBoxItem>
+            <ComboBoxItem>14:00</ComboBoxItem>
+            <ComboBoxItem>15:00</ComboBoxItem>
+            <ComboBoxItem>16:00</ComboBoxItem>
+            <ComboBoxItem>17:00</ComboBoxItem>
+            <ComboBoxItem>18:00</ComboBoxItem>
+            <ComboBoxItem>19:00</ComboBoxItem>
+            <ComboBoxItem>20:00</ComboBoxItem>
+            <ComboBoxItem>21:00</ComboBoxItem>
+            <ComboBoxItem>22:00</ComboBoxItem>
+            <ComboBoxItem>23:00</ComboBoxItem>
+        </ComboBox>
         <TextBox Text="{Binding activityDescription}" HorizontalContentAlignment="Center" Grid.RowSpan="2" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="5" Margin="7" Grid.ColumnSpan="2"></TextBox>
         <Button x:Name="buttonAdd" Grid.Column="2" Grid.Row="7" FontSize="16" Margin="10,10,10,0" Click="btnAdd_Click" Height="28" VerticalAlignment="Top" >Dodaj</Button>
         <Button x:Name="buttonCancel" Grid.Column="4" Grid.Row="7" FontSize="16" Margin="10" Click="Button_Click"  >Anuluj</Button>
