--- a/HotelDlaPsow/WindowDogAdd.xaml
+++ b/HotelDlaPsow/WindowDogAdd.xaml
@@ -66,7 +66,32 @@
         <TextBox HorizontalContentAlignment="Center" VerticalContentAlignment="Center"  Grid.Row="2" Margin="7" Grid.Column="5" Text="{Binding feedingFrequency,Mode=TwoWay}"></TextBox>
         <TextBox HorizontalContentAlignment="Center" VerticalContentAlignment="Center"  Grid.Row="3" Margin="7" Grid.Column="5" Text="{Binding feedingHour,Mode=TwoWay}"></TextBox>
         <TextBox HorizontalContentAlignment="Center" VerticalContentAlignment="Center"  Grid.Row="4" Margin="7" Grid.Column="5" Text="{Binding feedingNotes,Mode=TwoWay}"></TextBox>
-        <TextBox HorizontalContentAlignment="Center" VerticalContentAlignment="Center"  Grid.Row="5" Margin="7" Grid.Column="5" Text="{Binding hoursOfWalks,Mode=TwoWay}"></TextBox>
+        <ComboBox HorizontalContentAlignment="Center" VerticalContentAlignment="Center"  Grid.Row="5" Margin="7" Grid.Column="5" Text="{Binding hoursOfWalks,Mode=TwoWay}">
+            <ComboBoxItem>00:00</ComboBoxItem>
+            <ComboBoxItem>01:00</ComboBoxItem>
+            <ComboBoxItem>02:00</ComboBoxItem>
+            <ComboBoxItem>03:00</ComboBoxItem>
+            <ComboBoxItem>04:00</ComboBoxItem>
+            <ComboBoxItem>05:00</ComboBoxItem>
+            <ComboBoxItem>06:00</ComboBoxItem>
+            <ComboBoxItem>07:00</ComboBoxItem>
+            <ComboBoxItem>08:00</ComboBoxItem>
+            <ComboBoxItem>09:00</ComboBoxItem>
+            <ComboBoxItem>10:00</ComboBoxItem>
+            <ComboBoxItem>11:00</ComboBoxItem>
+            <ComboBoxItem>12:00</ComboBoxItem>
+            <ComboBoxItem>13:00</ComboBoxItem>
+            <ComboBoxItem>14:00</ComboBoxItem>
+            <ComboBoxItem>15:00</ComboBoxItem>
+            <ComboBoxItem>16:00</ComboBoxItem>
+            <ComboBoxItem>17:00</ComboBoxItem>
+            <ComboBoxItem>18:00</ComboBoxItem>
+            <ComboBoxItem>19:00</ComboBoxItem>
+            <ComboBoxItem>20:00</ComboBoxItem>
+            <ComboBoxItem>21:00</ComboBoxItem>
+            <ComboBoxItem>22:00</ComboBoxItem>
+            <ComboBoxItem>23:00</ComboBoxItem>
+        </ComboBox>
         <TextBox HorizontalContentAlignment="Center" VerticalContentAlignment="Center"  Grid.Row="6" Margin="7" Grid.Column="5" Text="{Binding lengthOfWalks,Mode=TwoWay}"></TextBox>
         <TextBox HorizontalContentAlignment="Center" VerticalContentAlignment="Center"  Grid.Row="7" Margin="7" Grid.Column="5" Text="{Binding healthStatus,Mode=TwoWay}"></TextBox>
 
